Added domain and data. Added controller to catalog service and connected it the repo.
